# new-ping-monitor

./: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  release.sh
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app-commands.json
src-tauri/permissions/app/: default.json
src-tauri/src/: lib.rs  main.rs  ping_service.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: PingCard.tsx  TitleBar.tsx
src/store/: useAppStore.ts
